<?xml version="1.0" encoding="utf-8"?>
<htoyama.githaru.presentation.view.gist.edit.GistEditView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="タイトル"
        />

    <EditText
        android:id="@+id/edit_gist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@color/teal_300"
        android:textSize="34sp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:background="@color/grey_50"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/edit_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/teal_300"
            android:hint="このファイルの名前"
            />

        <EditText
            android:id="@+id/edit_file_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/teal_300"
            android:minLines="10"
            android:gravity="top"
            />

    </LinearLayout>

</htoyama.githaru.presentation.view.gist.edit.GistEditView>